tests/snapshots/parser_tests__err_unclosed_brace.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:5:22

     5 │
       │ print("World")
       │              ^^^
       │

  ⓘ Expected RBrace
────────────────────────────────────────────────────────────
